Dark mode issue fixed

--- a/src/app/modules/main-module/sub-pages/header/header.component.scss
+++ b/src/app/modules/main-module/sub-pages/header/header.component.scss
@@ -37,7 +37,7 @@
 @media screen and (max-width: 767px) {
   .nav_menu {
     position: fixed;
-    bottom: -220px;
+    bottom: -217px;
     left: 0;
     width: 100%;
     background-color: var(--body-color);
